# UnnamedEngine

./: .editorconfig  .gitlab-ci.yml  CMakeLists.txt
UnnamedEngine/: CMakeLists.txt  UnnamedEngine.cpp
source/: CMakeLists.txt
source/engine/: CMakeLists.txt  engine.cpp  engine.h  engine_export.h
source/engine/include/: application.h
source/engine/include/engine/: application.h
source/engine/source/: application.cpp
source/enginecore/: CMakeLists.txt  enginecore.h  enginecore_export.h
source/enginecore/include/: application.h  logging.h
source/enginecore/source/: application.cpp  logging.cpp
source/unnamedengine/: CMakeLists.txt  UnnamedEngine.cpp  UnnamedEngine.h
tests/: CMakeLists.txt  unnamedenginetests.cpp
tests/unittests/: gtest_impl_unittest.cpp
