# CMakeList.txt : CMake project for UnnamedEngine, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (UnnamedEngine "UnnamedEngine.cpp" "UnnamedEngine.h")

# TODO: Add tests and install targets if needed.
